[package]
name = "EC_Cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.4.4",features = ["rand"]}
ec-generic = "0.1.14"
sha256 = "1.4.0"
rand = "0.8.5"
hex = "0.4.3"
[[bin]]
name = "ecdsa"
path = "src/ecdsa.rs"